# ms-tcn

./: .gitignore  .rtx.toml  LICENSE  Makefile  README.md  batch_gen.py  eval.py  kitware_dataloader.py  main.py  model.py  pyproject.toml
mstcn/: batch_gen.py  eval.py  main.py  model.py
