[tool.poetry]
name = "ms-tcn"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"


[[tool.poetry.source]]
name = "torch_cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
torch = [
  {platform = "linux", version = "^2.0.1+cu121", source = "torch_cu121"},
  {platform = "darwin", version = "^2.0.1", source = "pypi"},
]
torchvision = [
  {platform = "linux", version = "^0.16.0+cu121", source = "torch_cu121"},
  {platform = "darwin", version = "^0.16.0", source = "pypi"},
]
numpy = "^1.26.2"
pandas = "^2.1.3"




[tool.poetry.group.dev.dependencies]
ruff = "^0.1.5"
isort = "^5.12.0"
black = "^23.11.0"
pyright = "^1.1.335"
ipython = "^8.17.2"
matplotlib = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
